--- a/resources/sass/_blocks.scss
+++ b/resources/sass/_blocks.scss
@@ -206,6 +206,7 @@
   margin-bottom: $-l;
   overflow: initial;
   min-height: 60vh;
+  border-radius: 30px;
   &.auto-height {
     min-height: 0;
   }
