--- a/resources/sass/_html.scss
+++ b/resources/sass/_html.scss
@@ -11,7 +11,7 @@
 html {
   height: 100%;
   overflow-y: scroll;
-  background-color: #F2F2F2;
+  background-color: #D8E5D6;
   &.flexbox {
     overflow-y: hidden;
   }
