--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -27,7 +27,7 @@ $-xxs: 3px;
 $spacing: (('none', 0), ('xxs', $-xxs), ('xs', $-xs), ('s', $-s), ('m', $-m), ('l', $-l), ('xl', $-xl), ('xxl', $-xxl), ('auto', auto));
 
 // Fonts
-$text: -apple-system, BlinkMacSystemFont,
+$text: "Sen", -apple-system, BlinkMacSystemFont,
 "Segoe UI", "Oxygen", "Ubuntu", "Roboto", "Cantarell",
 "Fira Sans", "Droid Sans", "Helvetica Neue",
 sans-serif;
@@ -37,10 +37,11 @@ $fs-s: 12px;
 
 // Colours
 :root {
-  --color-primary: #44ac33;
+  --color-primary: #47AC34;
   --color-primary-light: rgba(32,110,167,0.15);
+  --color-link: #47AC34;
 
-  --color-page: #206ea7;
+  --color-page: #47AC34;
   --color-page-draft: #7e50b1;
   --color-chapter: #af4d0d;
   --color-book: #077b70;
