--- a/resources/sass/_colors.scss
+++ b/resources/sass/_colors.scss
@@ -87,7 +87,7 @@
   background-color: #FFFFFF;
 }
 .bg-book {
-  background-color: var(--color-book);
+ // background-color: var(--color-book);
 }
 .bg-chapter {
   background-color: var(--color-chapter);
