--- a/resources/sass/_lists.scss
+++ b/resources/sass/_lists.scss
@@ -389,8 +389,11 @@ ul.pagination {
     display: block;
   }
 }
-.entity-list .book-contents{
+.entity-list.book-contents{
   padding-left: 50px;
+  h4{
+    font-weight: bold;
+  }
 }
 
 .icon-list hr {
@@ -725,10 +728,14 @@ ul.pagination {
 .featured-image-container {
   position: relative;
   overflow: hidden;
-  min-height: 140px;
+  min-height: 136px;
+  width: 136px;
+  border-radius: 136px;
+  margin: auto;
   background-size: cover;
   background-position: 50% 50%;
   transition: opacity ease-in-out 240ms;
+  background-color: var(--color-primary);
   a {
     display: block;
   }
