--- a/resources/sass/_colors.scss
+++ b/resources/sass/_colors.scss
@@ -93,5 +93,5 @@
   background-color: var(--color-chapter);
 }
 .bg-bookshelf {
-  background-color: var(--color-bookshelf);
+ // background-color: var(--color-bookshelf);
 }
