--- a/resources/sass/_blocks.scss
+++ b/resources/sass/_blocks.scss
@@ -194,6 +194,7 @@
   }
   .text-muted{
     text-align: center;
+    margin-top: -10px;
   }
 }
 
@@ -213,6 +214,9 @@
   min-height: 60vh;
   border-radius: 30px;
   h1{
+    font-weight: light;
+  }
+  h1.break-text{
     font-weight: bold;
   }
   &.auto-height {
