--- a/resources/sass/_blocks.scss
+++ b/resources/sass/_blocks.scss
@@ -214,7 +214,7 @@
   min-height: 60vh;
   border-radius: 30px;
   h1{
-    font-weight: light;
+    font-weight: 100;
   }
   h1.break-text{
     font-weight: bold;
