--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -350,3 +350,6 @@ table.table .table-entity-item {
   grid-template-columns: 36px 1fr;
   align-items: center;
 }
+#recent-activity{
+  display: none!important;
+}
