Revert "Color styles"
This reverts commit f67723e54858073d7fc40d7730ef6a58354be4d6.

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -37,7 +37,7 @@ $fs-s: 12px;
 
 // Colours
 :root {
-  --color-primary: #44ac33;
+  --color-primary: #206ea7;
   --color-primary-light: rgba(32,110,167,0.15);
 
   --color-page: #206ea7;
